# PASSIVBOT_LIGHTER_STREAMING_DASHBOARD

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LIGHTER_DASHBOARD_PLAN.md  README.md  URL.txt  bundle_code.py  docker-compose.yml  fix_lighter_pem_permissions.bat  title_description.txt
backend/: pyproject.toml
backend/app/: __init__.py  config.py  envelope.py  logging.py  main.py  models.py
backend/app/api/: routes_dev.py  routes_http.py  routes_ws.py
backend/app/collector/: auto_discover.py  cache_poller.py  dedupe.py  funding_total.py  log_tail.py  parsers.py  ssh_client.py  trade_classifier.py  vps_latency.py
backend/app/events/: bus.py
backend/app/market/: lighter_rest.py  lighter_ws.py
backend/app/metrics/: cagr.py  engine.py  funding_estimator.py  pnl.py  risk.py
backend/app/persistence/: db.py  repos.py  schema.sql
backend/app/tools/: __init__.py  starting_capital.py
backend/tests/: conftest.py  test_cagr.py  test_dedupe.py  test_funding.py  test_metrics_engine.py  test_parsers.py  test_reconstruct_pnl.py  test_replay.py  test_starting_capital.py  test_trade_classifier.py
data/fixtures/: hype_pnls.sample.json  lighter_candles_1m_2d.sample.json  (+3 more)
docs/: DISCOVERY.md  STREAMING.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: index.css  (+2 more)
infos/: backup_passivbot_lighter.py  plot_passivbot.py
scripts/: discover_cache.sh  inject_event.py  probe_lighter_ws.py  run_dev.sh  run_stream.ps1  snapshot_cache.py
(+48 files in other folders)
